# buckyball

./: .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  env.sh  flake.nix  index.html  result.mlir  sourceme.sh
bb-tests/: .gitignore  CMakeLists.txt
bb-tests/customext/: CMakeLists.txt
bb-tests/customext/gemmini/: CMakeLists.txt  gemmini.cc  gemmini.h  gemmini_params.h
bb-tests/customext/toy/: CMakeLists.txt  toy.cc
bb-tests/customext/toy/diff/: difftest.h  ref.cc
bb-tests/customext/toy/diff/interface/: interface.h
bb-tests/customext/toy/include/: inst.h  params.h  toy.h
bb-tests/customext/toy/inst/: 24_mvin.cc  25_mvout.cc  26_bbfp_mul.cc  32_mul_warp16.cc  33_im2col.cc  34_transpose.cc
bb-tests/sardine/: .gitignore  README.md  conftest.py  package-lock.json  package.json  pytest.ini  requirements.txt  run_tests.py  workloads
bb-tests/sardine/tests/: test_ctest.py  test_mlir.py
bb-tests/uvbb/: .gitignore  README.md  ref
bb-tests/uvbb/dut/: .gitignore
bb-tests/uvbb/sequence/: ctest_vecunit_matmul_16xn_ones_singlecore-baremetal
bb-tests/workloads/: .gitignore  CMakeLists.txt
bb-tests/workloads/lib/: CMakeLists.txt
bb-tests/workloads/lib/bbhw/: CMakeLists.txt
bb-tests/workloads/lib/bbhw/isa/: 00_fence.c  01_barrier.c  02_gemmini_config.c  03_gemmini_flush.c  04_bdb_counter.c  16_mvout.c  21_shared_mvin.c  22_shared_mvout.c  23_mset.c  24_mvin.c  24_mvin.cc  25_mvout.c  25_mvout.cc  26_bbfp_mul.c  26_bbfp_mul.cc  27_matmul_ws.c  27_matmul_ws.cc  31_fence.c  31_fence.cc  32_mset.c  32_mul_warp16.c  32_mul_warp16.cc  33_im2col.c  33_im2col.cc  33_mvin.c  34_transpose.c  34_transpose.cc  35_gelu.c  35_relu.c  36_layernorm.c  37_softmax.c  38_relu.c  39_bbus_config.c  39_bfp.c  40_nnlut.c  40_quant.c  41_dequant.c  41_snn.c  42_abft_systolic.c  42_gemmini_config.c  (+29 more)
bb-tests/workloads/lib/bbhw/mem/: CMakeLists.txt  bank.c  bank.h  dma.h  mem.h  params.h  spad.c  spad.h
bb-tests/workloads/lib/bbsw/baremetal/: buddy_cycle_trace.c  buddy_cycle_trace.h  crt0.S
bb-tests/workloads/lib/mem/: spad.cc  spad.h
bb-tests/workloads/lib/param/: bank.cc  bank.h  dma.h
bb-tests/workloads/src/: CMakeLists.txt
bb-tests/workloads/src/CTest/: CMakeLists.txt  bbfp_matmul_random1.c  bbfp_matmul_random2.c  bbfp_matmul_random3.c  bbfpmatmul.c  bbfptest.c  buckyball.c  buckyball.h  gelu_test.c  im2col_test.c  layernorm_test.c  mvin_mvout_acc_test.c  mvin_mvout_alternate_test.c  mvin_mvout_test.c  relu_test.c  softmax_test.c  start.S  transpose_matmul.c  transpose_test.c  vecunit_matmul_16xn_ones.c  vecunit_matmul_16xn_random1.c  vecunit_matmul_16xn_random2.c  vecunit_matmul_16xn_random3.c  vecunit_matmul_16xn_zero_random.c  vecunit_matmul_col_row_vector.c  vecunit_matmul_identity_random.c  vecunit_matmul_ones.c  vecunit_matmul_random1.c  vecunit_matmul_random2.c  vecunit_matmul_random3.c  vecunit_matmul_row_col_vector.c  vecunit_matmul_zero_random.c  vecunit_simple_nn_forward_pass_test.c
bb-tests/workloads/src/CTest/base/: CMakeLists.txt  mvin_mvout_test.c  mvin_mvout_unaligned_test.c  mvin_unaligned_test.c
bb-tests/workloads/src/CTest/bebop/: CMakeLists.txt  mvin_mvout_acc_test.c  mvin_mvout_mset_test.c  mvin_mvout_test.c
bb-tests/workloads/src/CTest/embench/: README.md
bb-tests/workloads/src/CTest/gemmini/: CMakeLists.txt  Makefile  aligned.c  conv.c  conv_dw.c  conv_dw_perf.c  conv_first_layer.c  conv_perf.c  conv_rect.c  conv_rect_pool.c  conv_stride.c  conv_trans_input_3120.c  conv_trans_input_3120_with_kernel_dilation.c  conv_trans_output_1203.c  conv_trans_weight_0132.c  conv_trans_weight_1203.c  conv_with_input_dilation.c  conv_with_input_dilation_and_neg_padding.c  conv_with_input_dilation_and_rot180.c  conv_with_kernel_dilation.c  conv_with_pool.c  conv_with_rot180.c  gemmini_counter.c  global_average.c  matmul.c  matmul_os.c  matmul_ws.c  matrix_add.c  mvin_mvout.c  mvin_mvout_acc.c  mvin_mvout_acc_full.c  mvin_mvout_acc_full_stride.c  mvin_mvout_acc_stride.c  mvin_mvout_acc_zero_stride.c  mvin_mvout_block_stride.c  mvin_mvout_stride.c  mvin_mvout_zeros.c  mvin_scale.c  padded.c  raw_hazard.c  (+16 more)
bb-tests/workloads/src/CTest/goban/: CMakeLists.txt  barrier_mvin_test.c  barrier_test.c  goban.h  start.S
bb-tests/workloads/src/CTest/rvv/: .gitignore  CMakeLists.txt  vadd_test.c  vdot_test.c
bb-tests/workloads/src/CTest/toy/: CMakeLists.txt  abft_systolic_test.c  aligned_matmul.c  bbfp_matmul_random1.c  bbfp_matmul_random2.c  bbfp_matmul_random3.c  bbfpmatmul.c  bbfptest.c  bbsim.ld  bdb_backdoor_test.c  bdb_counter_test.c  bfp_test.c  boot_init_test.c  buckyball.c  buckyball.h  cim_test.c  conv_test.c  crt0.S  dequant_test.c  dump_baremetal_objdump.cmake  gemmini_matmul_test.c  gemmini_os_cisc_atranspose_test.c  gemmini_os_cisc_basic_test.c  im2col_test.c  (+51 more)
bb-tests/workloads/src/E2ETest/: CMakeLists.txt
bb-tests/workloads/src/ModelTest/: CMakeLists.txt
bb-tests/workloads/src/OpTest/: CMakeLists.txt  Makefile  bb_dma3.mlir  log.ll  start.S
bb-tests/workloads/src/sparse/: CMakeLists.txt  buckyball.h  inst.h  mgen.c  mgen.h
bb-tests/workloads/src/tutorial/: CMakeLists.txt  tutorial.c
bebop/customext/: CMakeLists.txt
bebop/customext/include/: bebop.h  socket.h  toy.h
bebop/customext/src/: bebop.cc  toy.cc
bebop/customext/src/socket/: socket.cc  socket_cmd.cc  socket_dma.cc
bebop/host/ipc/: CMakeLists.txt
bebop/host/spike/customext/: CMakeLists.txt
examples/chips/pebble/workloads/: CMakeLists.txt
examples/chips/toy/emu/: Cargo.toml
examples/chips/toy/workloads/: CMakeLists.txt
pegasus/driver/: CMakeLists.txt
pegasus/driver/include/: pegasus.h
pegasus/driver/src/: elf.cc  main.cc  scu.cc  uart.cc  xdma.cc
sims/customext/toy/: CMakeLists.txt  buckyball.cc  buckyball.h  buckyball_params.h  toy.cc  toy.h  toy_params.h
sims/customext/toy/diff/: difftest.h  ref.cc
sims/customext/toy/include/: common.h  inst.h  params.h  toy.h
sims/customext/toy/inst/: 24_mvin.cc  25_mvout.cc  26_bbfp_mul.cc  32_mul_warp16.cc  33_im2col.cc  33_sparse_mul.cc  34_scatter_mvin.cc  34_transpose.cc
(+1922 files in other folders)
